--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="https://unpkg.com/konva@7.0.2/konva.min.js"></script>
-		<meta charset="utf-8" />
-		<title>Konva Drag and Drop Demo</title>
+		<meta charset="utf-8"/>
+		<title>Draggy Shapes</title>
 		<style>
 			body {
 				margin: 0;
@@ -18,41 +17,5 @@
 	</head>
 	<body>
 		<div id="container"></div>
-		<script>
-			var width = window.innerWidth;
-			var height = window.innerHeight;
-
-			var stage = new Konva.Stage({
-				container: 'container',
-				width: width,
-				height: height,
-			});
-
-			var layer = new Konva.Layer();
-			var rectX = stage.width() / 2 - 50;
-			var rectY = stage.height() / 2 - 25;
-
-			var box = new Konva.Rect({
-				x: rectX,
-				y: rectY,
-				width: 100,
-				height: 50,
-				fill: '#00D2FF',
-				stroke: 'black',
-				strokeWidth: 4,
-				draggable: true,
-			});
-
-			// add cursor styling
-			box.on('mouseover', function () {
-				document.body.style.cursor = 'pointer';
-			});
-			box.on('mouseout', function () {
-				document.body.style.cursor = 'default';
-			});
-
-			layer.add(box);
-			stage.add(layer);
-		</script>
 	</body>
 </html>
