--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		}
 	</style>
 
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet"> 
+
 	<link rel="stylesheet" href="dist/css/main.css">
 	<script src="/dist/js/main.js"></script>
 
@@ -20,15 +23,15 @@
 
 <body>
 
-	<div class="w-screen h-screen p-8">
+	<div class="w-screen h-screen p-8 font-bold font-body uppercase">
 		<div class="w-full h-full border-8 border-black js_canvas-container relative theme-light bg-white">
 
-			<div class="flex justify-between items-center p-8 absolute w-full z-10">
+			<div class="flex justify-between items-center p-8 pb-0 absolute w-full z-10 top-0">
 
 				<div>
 
 					<div>
-						<label for="bg-colour" class="text-theme">Background</label>
+						<label for="bg-colour" class="text-theme uppercase">Background</label>
 					</div>
 
 					<div>
@@ -36,7 +39,7 @@
 						<input class="background-radio border-theme js_change-bg bg-black"		type="radio" name="bg-colour" value="black"		data-classes="theme-dark bg-black">
 						<input class="background-radio border-theme js_change-bg bg-grey-800"	type="radio" name="bg-colour" value="grey-800"	data-classes="theme-dark bg-grey-800">
 						<input class="background-radio border-theme js_change-bg bg-grey-200"	type="radio" name="bg-colour" value="grey-200"	data-classes="theme-light bg-grey-200">
-						<input class="background-radio border-theme js_change-bg bg-red"		type="radio" name="bg-colour" value="red"	data-classes="theme-light bg-red">
+						<input class="background-radio border-theme js_change-bg bg-red"		type="radio" name="bg-colour" value="red"		data-classes="theme-light bg-red">
 						<input class="background-radio border-theme js_change-bg bg-green"		type="radio" name="bg-colour" value="green"		data-classes="theme-light bg-green">
 						<input class="background-radio border-theme js_change-bg bg-blue"		type="radio" name="bg-colour" value="blue"		data-classes="theme-light bg-blue">
 						<input class="background-radio border-theme js_change-bg bg-orange"		type="radio" name="bg-colour" value="orange"	data-classes="theme-light bg-orange">
@@ -51,6 +54,19 @@
 			</div>
 
 			<div id="container"></div>
+
+			<div class="flex justify-between items-center p-8 pt-0 absolute w-full z-10 bottom-0">
+
+				<div>
+					<button class="js_reset uppercase">Reset</button>
+				</div>
+				
+				<div>
+					<button class="js_toggle-grid uppercase">Grid</button>
+				</div>
+
+			</div>
+
 		</div>
 	</div>
 
