add shsapes button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="w-screen h-screen p-8 font-bold font-body uppercase">
 		<div class="w-full h-full border-8 border-black js_canvas-container relative theme-light bg-white">
 
-			<div class="flex justify-between items-center p-8 pb-0 absolute w-full z-10 top-0">
+			<div class="flex justify-between items-start p-8 pb-0 absolute w-full z-10 top-0">
 
 				<div>
 
@@ -48,21 +48,21 @@
 				</div>
 
 				<div>
-					<a href="about">About</a>
+					<button class="js_about uppercase">About</button>
 				</div>
 
 			</div>
 
 			<div id="container"></div>
 
-			<div class="flex justify-between items-center p-8 pt-0 absolute w-full z-10 bottom-0">
+			<div class="flex justify-between items-end p-8 pt-0 absolute w-full z-10 bottom-0">
 
 				<div>
 					<button class="js_reset uppercase">Reset</button>
 				</div>
-				
+
 				<div>
-					<button class="js_toggle-grid uppercase">Grid</button>
+					<button class="js_add-shape uppercase">Add Shape</button>
 				</div>
 
 			</div>
