--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</style>
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet"> 
 
 	<link rel="stylesheet" href="dist/css/main.css">
 	<script src="/dist/js/main.js"></script>
@@ -48,7 +48,7 @@
 				</div>
 
 				<div>
-					<button class="js_about uppercase">About</button>
+					<button class="js_about-btn font-bold uppercase">About</button>
 				</div>
 
 			</div>
@@ -58,15 +58,46 @@
 			<div class="flex justify-between items-end p-8 pt-0 absolute w-full z-10 bottom-0">
 
 				<div>
-					<button class="js_reset uppercase">Reset</button>
+					<button class="js_reset font-bold uppercase">Reset</button>
 				</div>
 
 				<div>
-					<button class="js_add-shape uppercase">Add Shape</button>
+					<button class="js_add-shape font-bold uppercase">Add Shape</button>
 				</div>
 
 			</div>
 
+		</div>
+	</div>
+
+	<div class="js_about-content">
+
+		<div class="mb-4">
+			<p><strong>Change Colour</strong></p>
+			<p>Left click on any shape to change its colour.</p>
+		</div>
+
+		<div class="mb-4">
+			<p><strong>Bring To Front</strong></p>
+			<p>Right click on any shape to bring it to the front.</p>
+		</div>
+
+		<div class="mb-4">
+			<p><strong>Take a screenshot</strong></p>
+			<p>Capture, save, and share your creations!</p>
+		</div>
+
+		<div class="mb-4">
+			<p><strong>Follow</strong></p>
+			<p><a href="https://twitter.com/geo_shapes_">@geo_shapes_</a></p>
+		</div>
+
+		<div class="mb-4">
+			<p>Designed by <a href="https://twitter.com/georgiaburns_">@georgiaburns_</a></p>
+		</div>
+
+		<div class="mb-4">
+			<p>Built by <a href="https://www.linkedin.com/in/michael-westwood-45869744/">Michael Westwood</a>, using <a href="https://konvajs.org/">Konva</a> and <a href="https://sweetalert2.github.io/">Sweet Alert 2</a>.</p>
 		</div>
 	</div>
 
