fixed position UI on mob

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="w-screen h-screen md:p-8 font-bold font-body uppercase js_themer theme-light dark:theme-dark bg-grey-200 dark:bg-grey-800">
 		<div class="w-full h-full md:border-8 border-black js_canvas-container relative bg-white dark:bg-grey-800">
 
-			<div class="flex justify-between items-start p-8 pb-0 absolute w-full z-10 top-0">
+			<div class="flex justify-between items-start p-4 md:p-8 pb-0 fixed md:absolute w-full z-10 top-0">
 
 				<div>
 
@@ -60,7 +60,7 @@
 
 			<div id="container"></div>
 
-			<div class="flex justify-between items-end p-8 pt-0 absolute w-full z-10 bottom-0">
+			<div class="flex justify-between items-end p-4 md:p-8 pt-0 fixed md:absolute w-full z-10 bottom-0">
 
 				<div>
 					<button class="js_reset text-theme font-bold uppercase leading-3 block">Reset</button>
