--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 		}
 	</style>
 
-
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet"> 
-
+	<link rel="stylesheet" href="https://use.typekit.net/qez2jan.css">
 	<link rel="stylesheet" href="dist/css/main.css">
 	<script src="https://konvajs.org/js/hammer-konva.js"></script>
 	<script src="/dist/js/main.js"></script>
@@ -28,7 +25,7 @@
 
 <body>
 
-	<div class="w-screen h-screen md:p-8 font-bold font-body uppercase js_themer theme-light dark:theme-dark bg-grey-200 dark:bg-grey-800">
+	<div class="w-screen h-screen md:p-8 font-bold font-body tracking-wide uppercase js_themer theme-light dark:theme-dark bg-grey-200 dark:bg-grey-800">
 		<div class="w-full h-full md:border-8 border-black js_canvas-container relative bg-white dark:bg-grey-800">
 
 			<div class="flex justify-between items-start p-4 md:p-8 pb-0 fixed md:absolute w-full z-10 top-0">
@@ -36,7 +33,7 @@
 				<div>
 
 					<div>
-						<label for="bg-colour" class="text-theme uppercase block leading-3 mb-2">Background</label>
+						<label for="bg-colour" class="text-theme uppercase block tracking-wider leading-3 mb-2">Background</label>
 					</div>
 
 					<div>
@@ -53,7 +50,7 @@
 				</div>
 
 				<div>
-					<button class="js_about-btn text-theme font-bold uppercase leading-3 block">About</button>
+					<button class="js_about-btn text-theme font-bold tracking-wider uppercase leading-3 block">About</button>
 				</div>
 
 			</div>
@@ -63,11 +60,11 @@
 			<div class="flex justify-between items-end p-4 md:p-8 pt-0 fixed md:absolute w-full z-10 bottom-0">
 
 				<div>
-					<button class="js_reset text-theme font-bold uppercase leading-3 block">Reset</button>
+					<button class="js_reset text-theme font-bold tracking-wider uppercase leading-3 block">Reset</button>
 				</div>
 
 				<div>
-					<button class="js_add-shape text-theme font-bold uppercase leading-3 block">Add Shape</button>
+					<button class="js_add-shape text-theme font-bold tracking-wider uppercase leading-3 block">Add Shape</button>
 				</div>
 
 			</div>
@@ -94,15 +91,15 @@
 
 		<div class="mb-4">
 			<p><strong>Follow</strong></p>
-			<p><a target="_blank" href="https://twitter.com/geo_shapes_">@geo_shapes_</a></p>
+			<p><a target="_blank" href="https://www.instagram.com/geoshapes.art/">@geoshapes.art</a></p>
 		</div>
 
 		<div class="mb-4">
-			<p>Designed by <a target="_blank" href="https://twitter.com/georgiaburns_">@georgiaburns_</a></p>
+			<p>Designed by <a target="_blank" href="https://www.instagram.com/_georgiaburns/">@_georgiaburns</a></p>
 		</div>
 
 		<div class="mb-4">
-			<p>Built by <a target="_blank" href="https://www.linkedin.com/in/michael-westwood-45869744/">Michael Westwood</a>, using <a target="_blank" href="https://konvajs.org/">Konva</a> and <a target="_blank" href="https://sweetalert2.github.io/">Sweet Alert 2</a>. See the code on <a target="_blank" href="https://github.com/mijewe/draggyshapes">Github</a>.</p>
+			<p>Built by <a target="_blank" href="https://www.linkedin.com/in/michael-westwood-45869744/">Michael Westwood</a>, using <a target="_blank" href="https://konvajs.org/">Konva</a>, <a target="_blank" href="https://sweetalert2.github.io/">Sweet Alert 2</a>, and <a href="https://tailwindcss.com/">Tailwind</a>. See the code on <a target="_blank" href="https://github.com/mijewe/draggyshapes">Github</a>.</p>
 		</div>
 	</div>
 
