added honcho to humans

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		</div>
 
 		<div class="mb-4">
-			<p>Built by <a target="_blank" href="https://www.linkedin.com/in/michael-westwood-45869744/">Michael Westwood</a>, using <a target="_blank" href="https://konvajs.org/">Konva</a>, <a target="_blank" href="https://sweetalert2.github.io/">Sweet Alert 2</a>, and <a href="https://tailwindcss.com/">Tailwind</a>. See the code on <a target="_blank" href="https://github.com/mijewe/draggyshapes">Github</a>.</p>
+			<p>Built by <a target="_blank" href="https://www.linkedin.com/in/michael-westwood-45869744/">Michael Westwood</a>, using <a target="_blank" href="https://konvajs.org/">Konva</a>, <a target="_blank" href="https://sweetalert2.github.io/">Sweet Alert 2</a>, and <a href="https://tailwindcss.com/">Tailwind</a>. Hosted by <a href="https://honcho.agency">Honcho</a>. See the code on <a target="_blank" href="https://github.com/mijewe/draggyshapes">Github</a>.</p>
 		</div>
 	</div>
 
